cmake_minimum_required(VERSION 3.28)
project(src)

set(CMAKE_CXX_STANDARD 17)

add_executable(src main.cpp
        problems/P36.h
        problems/P1689.h
        problems/P1985.h
        problems/P543.h
        problems/P229.h
        problems/P380.h
        problems/P121.h
        problems/P217.h
        problems/P238.h
        problems/P153.h
        problems/P977.h
        problems/P15.h
        problems/P167.h
        problems/P3.h
        problems/P11.h
        problems/P371.h
        problems/P191.h
        problems/P190.h
        problems/P70.h
        problems/P322.h
        problems/P242.h
        problems/P49.h)
